@@ -15,4 +15,4 @@ Holocron Team
 Contributors
 ============
 
-- *here might be your name, don't miss your chance ;)*
+- Olha Kurkaiedova <olya.kurkaedova@gmail.com>
