@@ -53,11 +53,10 @@
   </div> <!-- /.footer-wrapper -->
 
   {% if theme.ribbon %}
-  <div class="ribbon-wrapper">
-    <a href="{{ theme.ribbon.link }}" class="ribbon">
-      {{ theme.ribbon.text }}
-    </a>
-  </div> <!-- /.ribbon-wrapper -->
+  <a href="{{ theme.ribbon.link }}" class="ribbon">
+    {{ theme.ribbon.text }}
+  </a>
+  <!-- /.ribbon -->
   {% endif %}
 
 {% include 'counters.html' %}
